@@ -1,10 +1,12 @@
-package no_37_sudoku_solver;
-
+package no_78_subsets;
 
 import java.util.ArrayList;
 import java.util.List;
 
-public class test {
+public class subsets {
+}
+
+class test {
 
     public static void main(String[] args) {
         int[] nums = {1, 2, 2};
@@ -25,7 +27,7 @@ public class test {
 
 
         for (int i = index; i < nums.length; i++) {
-              if(i > index && nums[i] == nums[i-1]) continue;
+
 
 
             current.add(nums[i]);
@@ -34,7 +36,7 @@ public class test {
             backtrack(nums, i + 1, current, result);
 
 
-            current.remove(current.size() - 1);
+            current.removeLast();
         }
     }
 }
